--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="https://www.linkedin.com/in/oswaldo-hernandez-de-luna/" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-linkedin"></i>
                         </a>
-                        <a href="https://www.instagram.com/tuNombreDeUsuario" target="_blank" rel="noopener noreferrer">
+                        <a href="https://github.com/A01753911/a01753911.github.io" target="_blank" rel="noopener noreferrer">
                             <i class="fa-brands fa-github"></i>
                         </a>
                         
